@@ -184,6 +184,8 @@ proc libgomp_target_compile { source dest type options } {
     global lang_test_file
     global lang_library_path
     global lang_link_flags
+    global lang_include_flags
+    global lang_source_re
 
     if { [info exists lang_test_file] } {
         if { $blddir != "" } {
@@ -193,6 +195,10 @@ proc libgomp_target_compile { source dest type options } {
             lappend options "ldflags=-L${blddir}/${lang_library_path}"
         }
         lappend options "ldflags=${lang_link_flags}"
+	if { [info exists lang_include_flags] \
+	     && [regexp ${lang_source_re} ${source}] } {
+	    lappend options "additional_flags=${lang_include_flags}"
+	}
     }
 
     if { [target_info needs_status_wrapper] != "" && [info exists gluefile] } {
